--- a/1021 WebTech/Coursework 1/test.html
+++ b/1021 WebTech/Coursework 1/test.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>asdasd</h1>
+    <!--
+        clickable logos instead, have them be alt text
+    -->
+    <a href="spotify.html">Spotify</a>
+    <a href="deezer.html">Deezer</a>
+    <a href="applemusic.html">Apple Music</a>
+    <a href="musictest.html">Audio Streaming Test</a>
+    <
+
+
 </body>
 </html>
