--- a/1021 WebTech/New/about.html
+++ b/1021 WebTech/New/about.html
@@ -11,7 +11,6 @@
     <link href="stylesheet.css" rel="stylesheet">
     <!--Invokes external JavaScript file-->
     <script src="about.js"></script>
-    </style>
 </head>
 
 <body>
@@ -19,12 +18,13 @@
     <a href="index.html" class="logo-link">
         <img src="images/rocksoc-logo.jpg" alt="Home">
     </a>
-    <!--Active class signifies the page currently being visited-->
+    <!-- Header styling for active page -->
     <a href="about.html" class="active">About</a>
     <a href="committee.html">Committee</a>
     <a href="schedule.html">Schedule</a>
     <a href="quiz.html">Quiz</a>
 </div>
+
 <div class="subpage">
     <h1>RockSoc FAQ's</h1>
     <!--Bulleted list tags to denote questions/answers-->
@@ -33,24 +33,30 @@
         <!--Reuse of .row class to encapsulate each question/answer-->
         <li class="row">
             <h2 class="question">How much does a membership cost, and how long does it last for?</h2>
-            <p class="answer"><b>A membership to RockSoc costs £5</b>, regardless of whether you're a student of the University of Leeds, 
-                and it lasts the entire academic year.</p>
+            <p class="answer"><b>A membership to RockSoc costs £5</b>, regardless of whether you're a student of the 
+                University of Leeds, and it lasts the entire academic year.</p>
         </li>
 
         <li class="row">
             <h2 class="question">What happens in RockSoc Friday socials?</h2>
-            <p class="answer">Friday is our night out! We usually head to the Dry Dock pub at <b>around 8pm</b> to let our members socialise before heading out to 
-                <a href="https://www.thekeyclubleeds.com/">The Key Club</a> for as long as you're willing to stay!</p>
+            <p class="answer">Friday is our night out! We usually head to the Dry Dock pub at <b>around 8pm</b> to let 
+                our members socialise before heading out to <a href="https://www.thekeyclubleeds.com/">The Key Club</a>
+                 for as long as you're willing to stay!</p>
         </li>
 
         <li class="row">
             <h2 class="question">What other benefits do I get with my membership?</h2>
-            <p class="answer">Our Treasurer crunched the numbers to get a deal with the Dry Dock pub to sell cocktails to members off the bar for <b>only £3!</b> Additionally, you get a cheaper entry to The Key Club on Fridays, costing £4. Just show your card to them and they'll be happy to accept it.</p>
+            <p class="answer">Our Treasurer crunched the numbers to get a deal with the Dry Dock pub to sell cocktails 
+                to members off the bar for <b>only £3!</b> Additionally, you get a cheaper entry to The Key Club on 
+                Fridays, costing £4. Just show your card to them and they'll be happy to accept it.</p>
         </li>
 
+        <!-- Hyperlink redirects user to committee page to obtain president details -->
         <li class="row">
             <h2 class="question">I've bought a membership, how do I get my card and member status online?</h2>
-            <p class="answer">Speak to our treasurer about getting a card, and they'll be able to provide you with one. Speak with the <a href="committee.html">President</a> on Discord and they'll validate your membership role for you.</p>
+            <p class="answer">Speak to our treasurer about getting a card, and they'll be able to provide you with one.
+                 Speak with the <a href="committee.html">President</a> on Discord and they'll validate your membership 
+                 role for you.</p>
         </li>
 
         <li class="row">
@@ -58,11 +64,6 @@
             <p class="answer">Keep checking the <a href="schedule.html">Schedule</a> to stay up to date!</p>
         </li>
 
-    </ul>  
-        
-    </div>
-    
-
+    </ul>        
 </div>
-
 </body>
