--- a/1021 WebTech/New/committee.html
+++ b/1021 WebTech/New/committee.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon-32x32.png" type="image/x-icon">
     <title>Committee - LUU RockSoc</title>
+    <!--Invokes main style sheet-->
     <link href="stylesheet.css" rel="stylesheet">
 </head>
 <body>
@@ -15,20 +16,29 @@
         <img src="images/rocksoc-logo.jpg" alt="Home">
     </a>
     <a href="about.html">About</a>
+    <!-- Header styling for active page -->
     <a href="committee.html" class="active">Committee</a>
     <a href="schedule.html">Schedule</a>
     <a href="quiz.html">Quiz</a>
 </div>
 
+<!-- Uses subpage class to follow similar CSS format-->
 <div class="subpage">
+
     <h1>Meet the team</h1>
+
+    <!-- Rows comprised of member picture, name, role, and description -->
+    
     <div class="row">
+        <!-- Images are currently set to default, no set committee pictures available -->
         <img src="images/default-pfp.jpg" alt="Anna Corbett">
         <h2>Anna Corbett</h2>
+        <!-- Role text is emboldened and italicised -->
         <p><i><b>President</b></i></p>
         <p><b>Anna</b> oversees the running of our society, hosts meetings and AGMs,
         and acts as our primary spokesperson to represent <i>RockSoc</i> to the fullest.</p>
     </div>
+
     <div class="row">
         <img src="images/default-pfp.jpg" alt="Ethan Crow">
         <h2>Ethan Crow</h2>
@@ -36,6 +46,7 @@
         <p>Second in command to the president is <b>Ethan,</b> who plays a close role
         to the overall management of the society.</p>
     </div>
+
     <div class="row">
         <img src="images/default-pfp.jpg" alt="Korel Bayram">
         <h2>Korel Bayram</h2>
@@ -43,11 +54,13 @@
         <p><b>Korel</b> keeps track of financial affairs of the society to help organise
         the budget to plan exciting events and benefits for your membership!</p>
     </div>
+
     <div class="row">
         <img src="images/default-pfp.jpg" alt="Olivia Brooks-Wilkins">
         <h2>Olivia Brooks-Wilkins</h2>
         <p><i><b>Social Media Manager</b></i></p>
-        <p><b>Olivia</b> can be contacted by email for any questions regarding the management of our social media platforms. She also designed our logo and promotional posts!</p>
+        <p><b>Olivia</b> can be contacted by email for any questions regarding the management of our social media 
+            platforms. She also designed our logo and promotional posts!</p>
     </div>
 
     <div class="row">
@@ -74,6 +87,7 @@
         any improvements to our networking.</p>
     </div>
 
+    <!-- Emphasis tag to signify imporatant content -->
     <div class="row">
         <img src="images/default-pfp.jpg" alt="Jamie Griffiths">
         <h2>Jamie Griffiths</h2>
@@ -90,6 +104,6 @@
         taking the administrative role of hosting our committee meetings and keeping
         everyone in touch with each other.</p>
     </div>
-    </div>
+
 </div>
 </body>
