--- a/1021 WebTech/New/schedule.html
+++ b/1021 WebTech/New/schedule.html
@@ -15,32 +15,41 @@
 <div class="header">
     <!--Site logo used in place of a simple home button-->
     <a href="index.html">
-        <img src="images/rocksoc-logo.jpg" alt="Home" id="header-logo"></img>
+        <img src="images/rocksoc-logo.jpg" alt="Home" id="header-logo">
     </a>
     <a href="about.html">About</a>
     <a href="committee.html">Committee</a>
+    <!-- Header styling for active page -->
     <a href="schedule.html" class="active">Schedule</a>
     <a href="quiz.html">Quiz</a>
 </div>
-<p><b>Update 5.8.23:</b> It's currently the end of term time and RockSoc won't be back until the start of the next school year. For now, here is a list of all the events we've had last year, but expect more to come soon!</p>
+
 <div class="subpage">
     
     <h1>Schedule</h1>
 
+    <!-- Update message to clarify the lack of up to date content on the page -->
+
+    <p><b>Update 5.8.23:</b> It's currently the end of term time and RockSoc won't be back until the start of the next
+         school year. For now, here is a list of all the events we've had last year, but expect more to come soon!</p>
+
     <div class="event">
-        <!--Some h2 tags removed as title is already mentioned in the image-->
+        <!-- Some h2 tags removed as title is already mentioned in the image -->
         <img src="images/rocksocball.jpg" alt="RockSoc Ball graphic - Friday 26th May, The Maven, £25pp">
+        <!-- Descriptions are directly copied from RockSoc Instagram page and do not have correct grammar -->
         <p><b>5.5.23:</b> In three weeks time we will be holding the first ROCKSOC BALL since before covid 💥
-            It will be a great chance to dress up and listen to some rock! The ball will be held on the 26th May at The Maven starting at 6:30pm    
-            Tickets are on sale now at £25pp and includes entry, a welcome drink, food and three additional drinks tokens- so you get a lot for your cherry!   
-            Tickets are on sale on engage and once purchased please fill out this form found on <a href="https://www.instagram.com/luurocksoc/?hl=en-gb">Instagram:</a>
+            It will be a great chance to dress up and listen to some rock! The ball will be held on the 
+            26th May at The Maven starting at 6:30pm Tickets are on sale now at £25pp and includes entry, 
+            a welcome drink, food and three additional drinks tokens- so you get a lot for your cherry!   
+            Tickets are on sale on engage and once purchased please fill out this form found on 
+            <a href="https://www.instagram.com/luurocksoc/?hl=en-gb">Instagram:</a>
         </p>
     </div>
 
     <div class="event">
         <img src="images/otley-run.jpg" alt="RockSoc Otley Run graphic">
-        <p><b>3.2.23:</b>🚨OTLEY RUN ON THE 6TH MAY 🚨 We will be kicking off next term with an Otley Run on 6th May with the theme whips and chains!
-            We will be meeting at 11 at woodies so see you there 🤘🏻
+        <p><b>3.2.23:</b>🚨OTLEY RUN ON THE 6TH MAY 🚨 We will be kicking off next term with an Otley Run on 
+            6th May with the theme whips and chains! We will be meeting at 11 at woodies so see you there 🤘🏻
             </p>
     </div>
 
@@ -51,9 +60,7 @@
             So keep a look out because band announcements and tickets will be coming out soon 👀
             </p>
     </div>
-
-
-
+</div>
 
 </body>
 </html>
